--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
           <div class="seprator"></div>
           <ul class="social-list">
             <li class="social-item">
-              <a class="social-link" href=""
+              <a class="social-link" href="https://github.com/sumith300" target="_blank"
                 ><i class="fa-brands fa-github"></i
               ></a>
             </li>
             <li class="social-item">
-              <a class="social-link" href=""
+              <a class="social-link" href="https://twitter.com/_sumith___" target="_blank"
                 ><i class="fa-brands fa-x-twitter"></i
               ></a>
             </li>
             <li class="social-item">
-              <a class="social-link" href=""
+              <a class="social-link" href="https://www.linkedin.com/in/sumith-meena-53b3331b5/" target="_blank"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
             </li>
