--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4>Indegene (Web Developer)</h4>
-                <span>Aug 2023 - Present</span>
+                <span>Aug 2023 - Aug 2024</span>
                 <ul class="timeline-content">
                   <li>
                     -Collaborated with cross-functional teams to gather
@@ -211,6 +211,13 @@
               <div><h3 class="resume-title">Education</h3></div>
             </div>
             <ol class="timeline-list">
+              <li class="timeline-item">
+                <h4>Christ University</h4>
+                <span>2024 - 2026</span>
+                <p class="timeline-content">
+                  MCA-Master of computer Appplication
+                </p>
+              </li>
               <li class="timeline-item">
                 <h4>Reva University</h4>
                 <span>2020 - 2023</span>
