--- a/index.html
+++ b/index.html
@@ -259,6 +259,66 @@
           <ul class="project-list">
             <li class="project-item">
               <a
+                href="https://makemychat.shreyjain.me/"
+                target="_blank"
+              >
+                <figure class="project-img">
+                  <img src="./images/makemychat.png" alt="" />
+                  <div class="eye-icon"><i class="fa-solid fa-eye"></i></div>
+                </figure>
+              </a>
+              <h3 class="project-title">Make My Chat</h3>
+              <div class="project-btn-container">
+                <button>
+                  <a
+                    href="https://makemychat.shreyjain.me/"
+                    target="_blank"
+                    class="project-btn-text"
+                    >Live</a
+                  >
+                </button>
+                <button>
+                  <a
+                    href="https://github.com/sumith300/"
+                    target="_blank"
+                    class="project-btn-text"
+                    >Code</a
+                  >
+                </button>
+              </div>
+            </li>
+            <li class="project-item">
+              <a
+                href="https://inbloom-phi.vercel.app/"
+                target="_blank"
+              >
+                <figure class="project-img">
+                  <img src="./images/inbloom.png" alt="" />
+                  <div class="eye-icon"><i class="fa-solid fa-eye"></i></div>
+                </figure>
+              </a>
+              <h3 class="project-title">Inbloom</h3>
+              <div class="project-btn-container">
+                <button>
+                  <a
+                    href="https://inbloom-phi.vercel.app/"
+                    target="_blank"
+                    class="project-btn-text"
+                    >Live</a
+                  >
+                </button>
+                <button>
+                  <a
+                    href="https://github.com/sumith300/"
+                    target="_blank"
+                    class="project-btn-text"
+                    >Code</a
+                  >
+                </button>
+              </div>
+            </li>
+            <li class="project-item">
+              <a
                 href="https://classy-kataifi-005e2b.netlify.app/"
                 target="_blank"
               >
