update the intership

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="profile-container">
           <div>
             <figure class="profile">
-              <img src="./images/profile.png" alt="" />
+              <img src="./images/profile.jpeg" alt="" />
             </figure>
           </div>
           <div class="profile-heading">
@@ -163,6 +163,21 @@
               <div><h3 class="resume-title">Experience</h3></div>
             </div>
             <ol class="timeline-list">
+               <li class="timeline-item">
+                <h4>kanilebettu Technologies (Web Developer Intern)</h4>
+                <span>Nov 2024 - Mar 2025</span>
+                <ul class="timeline-content">
+                  <li>
+                    -Redesigned and enhanced the existing website to create a more professional and user-friendly interface.
+                  </li>
+                  <li>
+                    -Worked with Angular, TypeScript to optimize site performance.
+                  </li>
+                  <li>
+                    -Collaborated with the team to align website updates with business goals and branding.
+                  </li>
+                </ul>
+              </li>
               <li class="timeline-item">
                 <h4>Indegene (Web Developer)</h4>
                 <span>Aug 2023 - Aug 2024</span>
@@ -242,11 +257,11 @@
           <section class="skills">
             <h3 class="resume-title">My Skills</h3>
             <ul class="skill-conatiner">
-              <li><span>Languges-</span>JavaScript, ES6, HTML5, CSS3</li>
+              <li><span>Languges-</span>JavaScript, TypeScript, ES6, HTML5, CSS3, Java </li>
               <li>
-                <span>Technologies-</span>JQuery, MongoDB, NodeJS, Express
+                <span>Technologies-</span>JQuery, ReactJs, MongoDB, NodeJS, Express, Spring Boot, Junit
               </li>
-              <li><span>Tools-</span>Git, Github, AdobeXD</li>
+              <li><span>Tools-</span>Git, Github, AdobeXD, Figma</li>
             </ul>
           </section>
         </article>
